# backpack-cpp-sdk

./: .gitignore  CMakeLists.txt  README.md
examples/: trading_example.cpp  websocket_example.cpp
include/backpack/: backpack_client.hpp  rest_client.hpp  types.hpp  websocket_client.hpp
install/include/backpack/: types.hpp  utils.hpp  websocket_client.hpp
src/: backpack_client.cpp  rest_client.cpp  utils.cpp  websocket_client.cpp
